--- a/config/config.yml
+++ b/config/config.yml
@@ -4,3 +4,8 @@ app:
 
 logger:
   log_level: debug
+
+queueConfig: 
+   region: ap-northeast-1
+   url: https://sqs.ap-northeast-1.amazonaws.com/993928368265/CorporationQueue.fifo
+   endpoint: https://sqs.ap-northeast-1.amazonaws.com
